[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/NormalMapEditor/vector2Vbox.gd" type="Script" id=1]

[node name="vector2Vbox" type="VBoxContainer"]
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xHbox" type="HBoxContainer" parent="."]
margin_right = 90.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="xLabel" type="Label" parent="xHbox"]
margin_right = 16.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 24 )
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "X"
align = 1
valign = 1

[node name="LineEdit" type="SpinBox" parent="xHbox"]
margin_left = 16.0
margin_right = 90.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
min_value = -65535.0
max_value = 65535.0
step = 0.001
allow_greater = true
allow_lesser = true

[node name="yHbox" type="HBoxContainer" parent="."]
margin_top = 28.0
margin_right = 90.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="yLabel" type="Label" parent="yHbox"]
margin_right = 16.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 24 )
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Y"
align = 1
valign = 1

[node name="LineEdit" type="SpinBox" parent="yHbox"]
margin_left = 16.0
margin_right = 90.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
min_value = -65535.0
max_value = 65535.0
step = 0.001
allow_greater = true
allow_lesser = true
